--- a/webextension/pages/blockpage.html
+++ b/webextension/pages/blockpage.html
@@ -365,7 +365,7 @@
           <center>
             <img src="no-fishing.png" width="200px">
           </center>
-          <h1>This page has been blocked by Primo Tapia</h1>
+          <h1>This page was blocked by Primo Tapia</h1>
           <!-- START CENTERED WHITE CONTAINER -->
           <table role="presentation" class="main">
 
@@ -376,7 +376,7 @@
                   <tr>
                     <td>
                       <p>Hi there,</p>
-                      <p>This page has been blocked because this: domain, social media profile or IP address had been
+                      <p>This page was blocked because this: domain, social media profile or IP address had been
                         reported as phishing related.</p>
                       <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                         <tbody>
